# bango-sdk

./: .clang-tidy  .env  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu20  Dockerfile.ubuntu22  Doxyfile  README.md  api.md  build.sql  compose.yaml  thread-safe-issues.txt
.circleci/: config.yml
.devcontainer/: devcontainer.json
apps/dbserver/: CMakeLists.txt
apps/dbserver/include/: DatabaseManager.h
apps/dbserver/src/: DatabaseManager.cpp  main.cpp
apps/debugapp/: CMakeLists.txt  main.cpp
apps/gameserver/: CMakeLists.txt
apps/gameserver/include/: BeheadableMonster.h  Character.h  CommandDispatcher.h  DBListener.h  GameManager.h  InitItem.h  Inventory.h  Item.h  Loot.h  Monster.h  NPC.h  NormalMonster.h  ObjectPool.h  Party.h  Player.h  RegularMonster.h  Skill.h  SkillManager.h  Socket.h  Spawn.h  User.h  World.h  WorldMap.h
apps/gameserver/src/: BeheadableMonster.cpp  Character.cpp  CommandDispatcher.cpp  DBListener.cpp  GameManager.cpp  Inventory.cpp  Item.cpp  Loot.cpp  Monster.cpp  NPC.cpp  NormalMonster.cpp  ObjectPool.cpp  Party.cpp  Player.cpp  RegularMonster.cpp  Skill.cpp  SkillManager.cpp  Socket.cpp  Spawn.cpp  User.cpp  World.cpp  WorldMap.cpp  main.cpp
apps/gameserver/test/: main.cpp  unit-worldmap.hpp
apps/shared/: inix.h
apps/shared/inix/: attributes.h  common.h  protocol.h  structures.h
core/anetwork/: CMakeLists.txt
core/anetwork/include/bango/anetwork/: client.h  packet.h  server.h  writable.h
core/anetwork/src/: client.cpp  packet.cpp  server.cpp  writable.cpp
core/network/: CMakeLists.txt
core/network/benchmark/: main.cpp  packet-creation.hpp  packet-pushpop.hpp  qpacket-creation.hpp  qpacket-pushpop.hpp
core/network/include/bango/: network.h
core/network/include/bango/network/: authorizable.h  client.h  component.h  packet.h  qpacket.h  server.h  session.h  tcp_client.h  tcp_server.h  writable.h
core/network/src/: authorizable.cpp  client.cpp  component.cpp  packet.cpp  qpacket.cpp  server.cpp  session.cpp  tcp_client.cpp  tcp_server.cpp  writable.cpp
core/network/test/: main.cpp  unit-authorizable.hpp  unit-packet.hpp  unit-qpacket.hpp
core/persistence/: CMakeLists.txt
core/persistence/include/bango/: persistence.h
core/persistence/include/bango/persistence/: connection.h  pool.h  query.h
core/persistence/src/: connection.cpp  pool.cpp  query.cpp
core/processor/: CMakeLists.txt
core/processor/benchmark/: main.cpp
core/processor/include/bango/processor/: db.h  file.h  lisp.h  parser.h
core/processor/src/: db.cpp  file.cpp  lisp.cpp  parser.cpp
core/processor/test/: main.cpp
core/space/: CMakeLists.txt
core/space/benchmark/: main.cpp  quadtree.hpp
core/space/include/bango/: space.h
core/space/include/bango/space/: map.h  quadtree.1.h  quadtree.h
core/space/src/: map.cpp  quadtree.cpp
core/space/test/: main.cpp  unit-map.hpp  unit-quadtree.hpp
core/utils/: CMakeLists.txt
core/utils/include/bango/utils/: interval_map.h  random.h  time.h
core/utils/src/: interval_map.cpp  random.cpp  time.cpp
core/utils/test/: main.cpp
docs/: deployment.md
